# gomark

./: README.md  go.mod  go.sum  latency.go  mark.go  mark_test.go  server.go  stub.go
adapter/: gm_callback.go  hook.go
cmd/example/: example.go
cmd/main/: gomark.go
gmi/: gmi.go
hook/: CMakeLists.txt  README.md  gmhook.cpp  gmhook.h  gmhookpp.h
internal/gm/: adder.go  cdf.go  combiner.go  count.go  flags.go  int_recoder_test.go  int_recorder.go  latency.go  latency_recorder.go  maxer.go  op.go  passive_status.go  pecentile_test.go  percentile.go  percentile_sampler.go  percentile_series.go  percentile_window.go  qps.go  reducer.go  reducer_test.go  sampler.go  series.go  server.go  status.go  stub.go  t_count.go  t_qps.go  t_window_maxer.go  value.go  variable.go  window.go  window_maxer.go
internal/httpsrv/: content.go  content.html  http_server.go  var.html
internal/util/: err_merge.go  wild_matcher.go  wild_matcher_test.go
